@@ -15,6 +15,9 @@ Release 0.19.1 - Unreleased
     HADOOP-4420. Add null checks for job, caused by invalid job IDs.
     (Aaron Kimball via tomwhite)
 
+    HADOOP-4632. Fix TestJobHistoryVersion to use test.build.dir instead of the
+    current workding directory for scratch space. (Amar Kamat via cdouglas)
+
 Release 0.19.0 - 2008-11-18
 
   INCOMPATIBLE CHANGES
